make module a vendor module

--- a/composer.json
+++ b/composer.json
@@ -1,9 +1,8 @@
 {
   "name": "restruct/silverstripe-inline-infofield",
   "description": "Drop-in configurable notice about cookies",
-  "type": "silverstripe-module",
+  "type": "silverstripe-vendormodule",
   "homepage": "http://github.com/restruct/silverstripe-inline-infofield",
-
   "keywords": [
     "silverstripe",
     "cookies"
