--- a/composer.json
+++ b/composer.json
@@ -7,11 +7,7 @@
     "silverstripe",
     "cookies"
   ],
-  "authors": [
-    {
-      "name": "restruct"
-    }
-  ],
+  "authors": [ { "name": "Restruct", "email": "dev@restruct.nl", "homepage": "https://restruct.nl" } ],
   "require": {
     "silverstripe/vendor-plugin": "^1.0",
     "silverstripe/framework": "^4.4"
